--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "archivener"
 version = "0.1.0"
 description = ""
 authors = ["cwulfman <cwulfman@princeton.edu>"]
-readme = "README.md"
+readme = "README.org"
 packages = [
   {include = "archivener", from = "src"},
 ]
@@ -18,6 +18,7 @@ spacy = "^3.5.0"
 iiif-resources = { git = "git@github.com:pulibrary/iiif-resources.git", branch = "main" }
 ocr-tools = { git = "git@github.com:pulibrary/ocr_tools.git", branch="main" }
 shortuuid = "^1.0.11"
+typer = "^0.7.0"
 
 [tool.poetry.group.dev.dependencies]
 pyright = "^1.1.298"
@@ -26,6 +27,9 @@ black = "^23.1.0"
 flake8 = "^6.0.0"
 isort = "^5.12.0"
 pytest-watch = "^4.2.0"
+
+[tool.poetry.scripts]
+ne-graph = "app:main"
 
 [build-system]
 requires = ["poetry-core"]
