--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ isort = "^5.12.0"
 pytest-watch = "^4.2.0"
 
 [tool.poetry.scripts]
-ne-graph = "app:main"
+negraph = "cli:main"
 
 [build-system]
 requires = ["poetry-core"]
