--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["cwulfman <cwulfman@princeton.edu>"]
 readme = "README.org"
 packages = [
   {include = "archivener", from = "src"},
+  {include = "ocrannotator", from = "src"},
 ]
 
 [tool.poetry.dependencies]
